--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,37 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.wrapper {
+  padding-top: 5rem;
+  margin: 0 auto;
+  width: 600px;
+  /* background-color: red; */
+}
+
+/* .btn {
+  font-family: 'Source Sans Pro', sans-serif;
+  background: #aaaaff;
+  border-radius: 5px;
+  border: 1px;
+  padding: 6px 18px;
+  color: #ffffff;
+  cursor: pointer;
+  text-align: center;
+} */
+
+.btn {
+  border: none;
+  background: #aaaaff;
+  color: #f2f2f2;
+  padding: 6px 18px;
+  font-size: 18px;
+  border-radius: 5px;
+  position: relative;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background: #c5c5f8;
+}
